Ivan_Nemkovich/12.K8s.FirstDeployment/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
#          - name: persistent-storage
#            mountPath: "/usr/share/nginx/html"
          - name: start-html-mount
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
      volumes:
#      - name: persistent-storage
#        persistentVolumeClaim:
#          claimName: app01-pv-claim
      - name: start-html-mount
        configMap:
          name: html
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    run: web-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "app.k8s-36.sa"
spec:
  rules:
    - host: app.k8s-35.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
